MGDOBR-445: Update openapi operationId generation strategy
For more details see:
- https://issues.redhat.com/browse/MGDOBR-445
